--- a/Lab2/index2.html
+++ b/Lab2/index2.html
@@ -21,7 +21,7 @@
     </div>
     <main style = "color: darkslategray">
         <section id = "About Me">
-            <h2>About Me</h2>
+            <h2>About</h2>
             <p><dd>I am a participative leader, a fan of challenges and innovation. My mission is to <span style = "color: rgb(241, 76, 0)"> create solutions to 
                 improve industrial processes and the use of resources in my region.</span> I want to contribute with ideas 
                 that help in the development of new technologies and systems that guide us towards a sustainable 
