--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel = "stylesheet" href = "index.css">
 	<title>Parcel Sandbox</title>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
