--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -26,8 +26,9 @@
               <div class="panel-body">
                 <form class="todoForm">
                   <fieldset>
-                    <textarea class="newTodo form-control" id = "todoText"></textarea>
-                    <button type="submit" class="submitButton" id = "ButtonPost"> 
+                    <textarea class="newTodo form-control" id="todoText">
+                    </textarea>
+                    <button type="submit" class="submitButton" id="ButtonPost"> 
                       Post Todo
                     </button>
                   </fieldset>
@@ -40,18 +41,18 @@
               <div class="panel-heading">
                 <h3>List of todo's</h3>
               </div>
-              <div class="panel-body" class="listOfTodos">
+              <div class="panel-body" class="listOfTodos" id="todoList">
 
               </div>
               <div class="buttons">
-                <button class="clearButton btn-info" id = "ButtonClear"> 
+                <button class="clearButton btn-info" id="ButtonClear"> 
                   Clear all Todo's
                 </button>
-                <button class="markAllButton btn-success" id = "ButtonMark"> 
+                <button class="markAllButton btn-success" id="ButtonMark"> 
                   Mark all Todo's
                 </button>
-                <button class="deleteButton btn-danger" id = "ButtonDelete"> 
-                  Delete all Todo's
+                <button class="deleteButton btn-danger" id="ButtonDelete"> 
+                  Delete all To Do's
                 </button>
               </div>
             </div>
@@ -61,7 +62,7 @@
     </main>
     <footer role="footer" class="footer">
       Todo list application
-    </footer>  
+    </footer>
+    <script src="js/script.js"> </script>
   </body>
-  <script src = "js/script.js"></script>
 </html>
