--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -63,6 +63,10 @@
     <footer role="footer" class="footer">
       Todo list application
     </footer>
+    <script
+    src="https://code.jquery.com/jquery-3.4.1.js"
+    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
     <script src="js/script.js"> </script>
   </body>
 </html>
