--- a/Lab7/hw.html
+++ b/Lab7/hw.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+  <header>
+    <center>
+      <img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Disney_wordmark.svg/1200px-Disney_wordmark.svg.png" height="80" alt = "DisneyLogo">
+    </center>
+  </header>
 
   <div id="disney-buttons">
 
